yamls/jupyterhub/service_hub.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /hub/metrics
    prometheus.io/port: "8081"
    prometheus.io/scrape: "true"
  labels:
    app: jupyterhub
    chart: jupyterhub-1.2.0
    component: hub
    heritage: Helm
    release: RELEASE-NAME
  name: hub
spec:
  ports:
  - name: hub
    port: 8081
    targetPort: http
  selector:
    app: jupyterhub
    component: hub
    release: RELEASE-NAME
  type: ClusterIP
