yamls/jupyterhub/service_proxy-public.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jupyterhub
    chart: jupyterhub-1.2.0
    component: proxy-public
    heritage: Helm
    release: RELEASE-NAME
  name: proxy-public
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    component: proxy
    release: RELEASE-NAME
  type: LoadBalancer
