yamls/jupyterhub/networkpolicy_hub.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: jupyterhub
    chart: jupyterhub-1.2.0
    component: hub
    heritage: Helm
    release: RELEASE-NAME
  name: hub
spec:
  egress:
  - ports:
    - port: 8001
    to:
    - podSelector:
        matchLabels:
          app: jupyterhub
          component: proxy
          release: RELEASE-NAME
  - ports:
    - port: 8888
    to:
    - podSelector:
        matchLabels:
          app: jupyterhub
          component: singleuser-server
          release: RELEASE-NAME
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
  ingress:
  - from:
    - podSelector:
        matchLabels:
          hub.jupyter.org/network-access-hub: "true"
    ports:
    - port: http
  podSelector:
    matchLabels:
      app: jupyterhub
      component: hub
      release: RELEASE-NAME
  policyTypes:
  - Ingress
  - Egress
